# notes

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .dvcignore  .env  .gitignore  .gitmodules  .justfile  .pre-commit-config.yaml  .prettierignore  .renovaterc.json  .sourcery.yaml  CHANGELOG.md  CONTRIBUTING.md  Dev.ps1  Invoke-Just.ps1  README.md  _dvc.yaml  dev.ps1  dvc.yaml  env.json  eslint.config.mjs  j.ps1  justfile  lock.json  notes.code-workspace  package-lock.json  package.json  params.yaml  params.yml  params_schema.json  prek.toml  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json  requirements.txt  root.tsRt  tsconfig.json
.devcontainer/: devcontainer.json
.dvc/: config
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  internal.yaml
.github/workflows/: changerelease.yml  ci.yml  contrib.yml  env.yml  locks.yml  main.yml  minimum.yml  release.yml  wheels.yml
.tools/: pyproject.toml
.tools/requirements/: macos.txt  requirements.txt  requirements_both.txt  requirements_ci.txt  requirements_dev.txt  requirements_docs.txt  ubuntu.txt  windows.txt
.tools/scripts/: Update-PinnedDependency.ps1  local_dev_configs.py  local_pyrightconfig.py
changelog/: towncrier_template.md.jinja
data/: .gitignore
data/common/: .env  .gitignore
data/common/.scripts/: ConvertTo-ReportObsidian.ps1  ConvertTo-ReviewObsidian.ps1  Copy-SourcesFromClipboard.ps1  Get-SourceFromObsidian.ps1  Get-SourcesFromClipboard.ps1  LiteratureCommon.ps1  conf.py  find.py  get_sources_from_clipboard.ahk  literature_common.py  preview.py  requirements.txt  watch.py
data/common/.scripts/historical/: New-CslModel.ps1  copy_filenames.ahk  csl_models.py  print_title_statistics.py  readme.txt  rename_title_to_citekey.py
data/deprecated/: New-CslModel.ps1  copy_filenames.py  csl_models.py  print_title_statistics.py  remove_at_from_notes.py  rename_title_to_citekey.py
data/local/: .gitignore
data/local/vaults/grad/: .gitignore
data/local/vaults/grad/_dvc/: notebooks.dvc
data/local/vaults/grad/_external/dvc/: test.dvc
data/local/vaults/personal/_dvc/: notebooks.dvc
data/obsidian_common/plugins/mrj-text-expand/: main.js
data/obsidian_common/snippets/: callouts.css  canvas.css  checkbox.css
docs/: .gitignore  2024-11-12T14-25-57-set-up-amsl-obsidian-vault.md  conf.py  contributing.md  dag.md  index.md  pork-beans-and-greens.md  pyproject.toml
docs/concurrency-in-python/: .gitignore  after.prof  before.prof  example-notebook.ipynb  index.md  logs.ipynb
docs/notes_docs/: docstrings.py  intersphinx.py
notebooks/: get_lists.ipynb  sunshine.ipynb  sync_bullet_list.ipynb  sync_bullet_overflow.ipynb
requirements/: dev.in  requirements.txt  requirements_dev.txt
scripts/: Format-Changes.ps1  Format-TemplateScript.ps1  Initialize-Repo.ps1  Sync-Py.ps1  Watch-TemplateScripts.ps1  better_bibtex_preferences.json  common.just  inst.just  notes.ps1  proj.just  pyproject.toml  review.dotx
scripts/notes_tools/: __main__.py  add_changes.py  sync.py
src/notes/: __init__.py  __main__.py  bullet.py  cli.py  find.py  generate_report.py  literature_common.py  markdown.py  migrate_leads.py  pomodouroboros_at_home.py  sanitize_source_tags.py  serialization.py  times.py  todo.py  toggl.py  watch.py  win.py
src/notes/deprecated/: __init__.py  move_timestamped.py  sync_settings.py  update_common_old.py
src/notes/manual/: refactor_heading.py  sanitize_source_tags.py  sort_json.py
src/notes/models/: __init__.py  params.py  paths.py
src/notes/stages/: move_timestamped.py  sanitize_source_tags.py  schema.py  sync_settings.py  update_common.py
templates/: cite.ts  getChoice.ts  getDateFmt.ts  getDatetimeFmt.ts  getEntry.ts  getEntryGroups.ts  getEntryId.ts  getExpenses.ts  getFilenameDatetimeFmt.ts  getSelOrClip.ts  getTasks.ts  getTimeFmt.ts  getTimeTrackingEntry.ts  getToDo.ts  invokedFromTemplaterCreate.ts  taskBlock.ts  templater.ts  testUserTemplates.ts  types.d.ts  types.ts
tests/: __init__.py  conftest.py  pyproject.toml  test_canary.py  test_notes.py  test_pomodouroboros_at_home.py
tests/data/: generate.py
tests/data/cloud/schema/: params_schema.json
tests/expected/data/local/vaults/personal/_timestamped/: not-grad.md
tests/notes_tests/: __init__.py  conftest.py  test_notes.py
tests/root/data/local/vaults/amsl/_timestamped/: grad-and-other-inline.md  grad-front-and-other-inline.md  grad.md  not-grad-and-other-inline.md  not-grad-inline.md
