[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "notes"
version = "0.0.0"
description = "Centralized repository of my Obsidian vaults and shared tooling."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "License :: OSI Approved :: MIT License",]
dependencies = [ "clipboard>=0.0.4", "dvc[gdrive]>=2.58.2", "loguru>=0.7.0", "marko>=1.3.0", "pydantic>=1.10.7", "rich>=13.3.5", "ruamel.yaml>=0.17.26", "typer>=0.9.0", "watchdog>=3.0.0",]
[[project.authors]]
name = "Blake Naccarato"
email = "blake.naccarato@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Changes = "https://blakeNaccarato.github.io/notes/changelog.html"
Docs = "https://blakeNaccarato.github.io/notes"
Home = "https://github.com/blakeNaccarato/notes"
Tracker = "https://github.com/blakeNaccarato/notes/issues"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "D402", "DTZ", "E501", "EM", "ERA", "FBT", "F841", "G0", "INP001", "ISC", "PD013", "PD901", "PD011", "PGH003", "PIE804", "PLR0913", "PLR2004", "PLW2901", "RET", "S301", "TCH", "TD", "TRY003", "W2", "B018", "F821", "S101", "T201",]
unfixable = [ "F601",]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"docs/**" = [ "E402",]
"tests/**" = [ "ARG001", "S101",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
