[build-system]
requires = ["uv-build==0.10.12"]
build-backend = "uv_build"

[project]
name = "notes"
version = "0.0.0"
authors = [{ name = "Blake Naccarato", email = "blake.naccarato@gmail.com" }]
description = "Centralized repository of my Obsidian vaults and shared tooling."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3.14",
  #? Also in CI (https://github.com/actions/python-versions/releases)
  # "Programming Language :: Python :: 3.15",  #? Not yet beta (https://peps.python.org/pep-0790/#schedule)
]
dependencies = [
  "aiopath>=0.6.11",
  "cappa>=0.31.0",
  "loguru>=0.7.2",
  "markdown-it-py>=3.0.0",
  "marko>=2.1.2",
  "mdformat>=0.7.22",
  "mdformat-frontmatter>=2.0.8",
  "mdit-py-plugins>=0.4.0",
  "more-itertools>=10.7.0",
  "obsidiantools>=0.10.0",
  "playwright>=1.51.0",
  "psutil>=7.0.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.9.2",
  "pywin32>=310",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.49",
  "sqlmodel>=0.0.14",
  "typer>=0.9.0",
  "watchdog>=4.0.1",
]
[dependency-groups]
dev = [
  #TODO
  "ruamel.yaml>=0.18.6",
  "watchfiles>=1.1.1",
  "pytest-instafail>=0.5.0",
  "pytest-testmon>=2.1.3",
  #? Dev
  "debugpy>=1.8.2",
  "fawltydeps>=0.18.0",
  "pipdeptree>=2.23.0",
  "prek>=0.3.6",
  "snakeviz>=2.2.0",
  "sourcery>=1.32.0",
  #? For VSCode Jupyter notebooks and Data Wrangler
  "ipykernel>=6.29.5",
  "pandas-stubs>=2.2.3.250527",
  "pandas>=3.0.1",
  "pyarrow>=17.0.0",
  "pyspark>=3.5.5",
  #? Docs
  "linkify-it-py>=2.0.3",
  "myst-nb>=1.1.1",
  "numpydoc>=1.8.0",
  "sphinx-autobuild>=2024.4.16",
  "sphinx-autodoc2>=0.5.0",
  "sphinx-book-theme>=1.1.3",
  "sphinx-design>=0.6.0",
  "sphinx-thebe>=0.3.1",
  "sphinx-tippy>=0.4.3",
  "sphinx-togglebutton>=0.3.2",
  "sphinxcontrib-bibtex>=2.6.2",
  "sphinxcontrib-mermaid>=0.9.2",
  "sphinxcontrib-towncrier>=0.5.0a0",
  "towncrier>=24.8.0",
  #? Marimo
  "marimo[lsp,sql]==0.23.2", #! Satisfies Marimo VSCode extension requirement
  "ruff==0.15.10",           #! Satisfies Ruff and Marimo VSCode extension requirements
  "ty==0.0.32",              #! Satisfies Ty and Marimo VSCode extension requirements
  #? Tests
  "pytest-cov>=5.0.0",
  "pytest-custom-exit-code>=0.3.0",
  "pytest-github-actions-annotate-failures>=0.2.0",
  "pytest>=8.3.4",
]
[project.urls]
Changes = "https://blakeNaccarato.github.io/notes/changelog.html"
Docs = "https://blakeNaccarato.github.io/notes"
Home = "https://github.com/blakeNaccarato/notes"
Tracker = "https://github.com/blakeNaccarato/notes/issues"
[project.scripts]
"notes" = "notes.__main__:main"

[tool.uv]
required-version = ">=0.10.12"
constraint-dependencies = [
  "fawltydeps<0.19.0", #? Intentionally don't check new dependency groups where we keep dev deps, avoids lots of repetition in `tool.fawltydeps.ignore_unused`
  "greenlet>=3.3.2",   #? uv sync to Python 3.14 on 2026-04-04: notes > sqlalchemy@2.0.49 > greenlet@3.2.0
  "lxml>=6.0.2",       #? uv sync to Python 3.14 on 2026-04-04: notes > obsidiantools@0.10.0 > lxml@4.3.0
  "orjson>=3.11.8",    #? uv sync to Python 3.14 on 2026-04-04: notes-pipeline:dev > dvc@3.67.0 > dvc-data@3.18.3 > orjson@3.10.16
  "pygit2>=1.19.2",    #? uv sync to Python 3.14 on 2026-04-04: notes-pipeline:dev > dvc@3.67.0 > scmrepo@3.6.1 > pygit2@1.17.0
  "rpds-py>=0.30.0",   #? uv sync to Python 3.14 on 2026-04-04: notes-pipeline > altair@6.0.0 > jsonschema@4.23.0 > rpds-py@0.24.0
]
[tool.uv.pip]
python-version = "3.14"
[tool.uv.sources]
notes-dev = { workspace = true }
notes-pipeline = { workspace = true }
pipeline-helper = { workspace = true }
[tool.uv.workspace]
members = [
  "packages/_dev",
  "packages/_pipeline",
  "packages/_pipeline-helper",
  "packages/my_shortcuts",
]

[tool.coverage.report]
exclude_also = ['if __name__ == "__main__":']
[tool.coverage.run]
branch = true
source = [
  "src",
  "docs",
  "notebooks",
  "packages/_dev",
  "packages/_pipeline",
  "packages/_pipeline-helper",
  "packages/my_shortcuts",
  "scripts",
  "tests",
]

[tool.fawltydeps]
deps = ["pyproject.toml"]
code = ["src"]
ignore_unused = [
  "pyarrow", #? Used for pandas types
]
[tool.fawltydeps.custom_mapping]
pywin32 = ["win32api", "win32con", "win32gui", "win32process"]

[tool.pytest.ini_options]
addopts = """
  -p no:legacypaths
  -r a
  --full-trace
  --strict-config
  --strict-markers
  --suppress-no-test-exit-code
  --color=yes
"""
cache_dir = ".cache/.pytest_cache"
markers = "slow"
testpaths = "tests"
xfail_strict = true

[tool.marimo.ai]
inline_tooltip = false # (default: true) whether to show the inline AI tooltip
[tool.marimo.ai.models] # (default: empty) whether to enable AI models
custom_models = []
displayed_models = []

[tool.marimo.completion]
activate_on_typing = false      # (default: true) if false, completion won't activate until the completion hotkey is entered
signature_hint_on_typing = true # (default: false) if false, signature hint won't be shown when typing
copilot = false                 # (default: false) false or one of "github", "codeium", or "custom"

[tool.marimo.datasources]
auto_discover_schemas = true   # (default: true) whether to include schemas in the datasource
auto_discover_tables = "auto"  # (default: "auto") whether to include tables in the datasource
auto_discover_columns = "auto" # (default: false) whether to include columns & table metadata in the datasource

[tool.marimo.diagnostics]
enabled = false   # (default: false) if true, diagnostics will be shown in the editor
sql_linter = true # (default: true) if true, SQL cells will have linting enabled

[tool.marimo.display]
theme = "system"               # (default: "light") one of "light", "dark", or "system"
code_editor_font_size = 14     # (default: 14) font size for the code editor
cell_output = "below"          # (default: "below") one of "above" or "below"
default_width = "medium"       # (default: "medium")
dataframes = "rich"            # (default: "rich") one of "rich" or "plain"
default_table_page_size = 10   # (default: 10) default number of rows to display in tables
default_table_max_columns = 50 # (default: 50) default maximum number of columns to display in tables
reference_highlighting = true  # (default: true) if true, highlight reactive variable references
custom_css = []                # (empty by default) list of paths to custom CSS files
locale = "en-US"               # (inferred by default) locale for date formatting and internationalization (e.g., "en-US", "en-GB", "de-DE")

[tool.marimo.formatting]
line_length = 88 # (default: 79) max line length

[tool.marimo.keymap]
preset = "default"
[tool.marimo.keymap.overrides]

[tool.marimo.language_servers.pylsp]
enabled = true            # (default: false) Enable/disable the Python language server
enable_mypy = false       # (default: true if installed) Type checking with mypy
enable_ruff = true        # (default: true if installed) Linting with ruff
enable_flake8 = false     # (default: false) Linting with flake8
enable_pydocstyle = false # (default: false) Check docstring style
enable_pylint = false     # (default: false) Linting with pylint
enable_pyflakes = false   # (default: false) Syntax checking with pyflakes
[tool.marimo.language_servers.basedpyright]
enabled = true
[tool.marimo.language_servers.ty]
enabled = false

[tool.marimo.package_management]
manager = "uv" # (inferred by default) one of "pip", "rye", "uv", "poetry", or "pixi"

[tool.marimo.runtime]
auto_instantiate = false # (default: false) whether to autorun cells on editing startup
auto_reload = "autorun" # (default: "off") "autorun" cells importing modified modules or mark stale if "lazy"
default_auto_download = [ # (empty by default) whether to auto-download outputs to __marimo__ folders
]
default_sql_output = "auto" # (default: "auto")  one of "auto", "native", "polars", "lazy-polars", or "pandas"
dotenv = [
  ".env", # (default: ".env" if "pyproject.toml" found else "[]") list of ".env" paths to load, ignore non-existing
]
on_cell_change = "autorun" # (default: "autorun") whether to "autorun" if ancestors run or mark stale if "lazy"
output_max_bytes = 100_000_000_000 # (default: $Env:MARIMO_OUTPUT_MAX_BYTES or 8_000_000) max bytes of console outputs
reactive_tests = true # (default: true) whether to autorun pytest on cells containing only test functions and test classes
std_stream_max_bytes = 100_000_000_000 # (default: $Env:MARIMO_OUTPUT_MAX_BYTES or 1_000_000) max bytes of cell outputs
watcher_on_save = "autorun" # (default: "lazy") whether to "autorun" affected cells on save or mark stale if "lazy"

[tool.marimo.save]
autosave = "after_delay" # (default: "after_delay") one of "after_delay" or "off"
autosave_delay = 1_000   # (default: 1_000) milliseconds
format_on_save = true

[tool.marimo.server]
browser = "default"
follow_symlink = false

[tool.marimo.snippets]
custom_paths = []               # (empty by default) paths to custom snippets directories
include_default_snippets = true # (default: true)

[tool.marimo.mcp]
presets = []
[tool.marimo.mcp.mcpServers]

[tool.marimo.venv]
path = ".venv"
writable = false

[tool.towncrier]
directory = "changelog"
filename = "CHANGELOG.md"
template = "changelog/towncrier_template.md.jinja"
title_format = ""
issue_format = "[#{issue}](https://github.com/blakeNaccarato/notes/issues/{issue})"
underlines = ["", "", ""]
[[tool.towncrier.section]]
path = ""
[[tool.towncrier.type]]
directory = "breaking"
name = "Backwards-incompatible changes"
showcontent = true
[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true
[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true

[tool.pyright]
typeCheckingMode = "off" #? Explicitly disable Pylance type checking to avoid prompt
reportMissingImports = "none" #? Needed even when `typeCheckingMode` is `off`
include = [
  "src",
  "docs",
  "notebooks",
  "packages/_dev",
  "packages/_pipeline",
  "packages/_pipeline-helper",
  "packages/my_shortcuts",
  "scripts",
  "tests",
]
ignore = ["**/.*", "*:/**/.*", "*:/**/appdata"]

[tool.ruff]
cache-dir = ".cache/.ruff_cache"
extend-exclude = ["packages/lookback"]
fix = true
output-format = "grouped"
preview = true
show-fixes = true
src = [
  "src",
  "docs",
  "notebooks",
  "notebooks",
  "packages/_dev",
  "packages/_pipeline",
  "packages/_pipeline-helper",
  "packages/my_shortcuts",
  "scripts",
  "tests",
]
[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "ALL",  # Select all rules
  "D417", # Explicitly enable parameter check even when using Numpy docstrings
]
unfixable = [
  "PIE790", # Don't remove `pass`/`...`, overridden in prek
]
extend-safe-fixes = [
  "F401", # Allow autofix for unused imports even in `__init__.py`
]
ignore = [
  "ANN",     # Don't require type annotations
  "ARG005",  # Allow unused lambda argument. For consistency across df pipelines.
  "C408",    # Allow dict calls
  "COM",     # Allow magic commas and magic missing commas
  "CPY001",  # Don't check for copyright
  "D10",     # Allow missing docstrings
  "DOC",     # Don't require documented returns, yields, exceptions, etc.
  "DTZ",     # Timezones are important, but only contextually necessary.
  "E501",    # Don't check line length. Black handles this.
  "EM",      # Don't check for exception message issues
  "ERA",     # False positives. Don't get rid of commented out code.
  "FBT",     # Allow boolean "traps"
  "FIX002",  # Allow TODOs
  "FLY002",  # Allow different string representations
  "FURB118", # Incorrectly applies `itemgetter`
  "FURB140", # Don't replace comprehensions with starmap
  "G0",      # Allow f-strings, etc. in Loguru logging
  "ICN",     # Don't require these ad-hoc "conventional" import names
  "INP001",  # False positives. Checks for packages missing `__init__.py`
  "ISC",     # False positives. Implicit string concatenation is fine.
  "PD009",   # Allow `df.iat`.
  "PD011",   # Allow use of `.values`. False positives.
  "PD013",   # Allow `stack` instead of `melt`. They're not a direct swap.
  "PD101",   # Allow use of nunique(). False positives
  "PD011",   # Allow use of `.values`. False positives.
  "PLR6201", # Don't require set literal for membership checks
  "PGH003",  # Until black stops wrapping special ignores, let's allow bare
  "PIE804",  # Allow dict unpack even if unnecessary, consisent for df.assign{**...}
  "PLC0105", # Dont enforce Hungarian notation for `TypeVar` variance
  "PLC2701", # Allow private name imports
  "PLR0913", # Allow more than five function arguments
  "PLR0914", # Allow lots of local variables
  "PLR0917", # Allow more than five positional arguments
  "PLR1704", # Allow redefining arguments, often for sanitization
  "PLR2004", # Allow magic values. This check is too sensitive
  "PLR6201", # Don't require set literal for membership checks
  "PLR6301", # Allow methods that don't reference self, may be overridden
  "PLW0108", # Don't warn about unnecessary lambda. Often needed in pandas chains
  "PLW0642", # Allow reassignment to `cls` and `self`
  "PLW2901", # For loop variable
  "RET",     # Return checks are flaky, Sourcery does fine analysing these paths
  "RUF067",  #TODO: Make __init__.py only have docstrings and re-exports
  "S301",    # Don't warn about pickling.
  "S403",    # Don't warn about pickle-like modules.
  "S404",    # Don't warn about subprocess.
  "TC",      # Type checking linter doesn't play nicely with pydantic
  "TD",      # Disable to-do validation. Too pedantic for now.
  "TRY003",  # Allow long exception messages
  "W2",      # Allow whitespace issues. Fixed automatically by black.
]
[tool.ruff.lint.isort]
split-on-trailing-comma = false
[tool.ruff.format]
skip-magic-trailing-comma = true
[tool.ruff.lint.pydocstyle]
convention = "numpy"
[tool.ruff.lint.extend-per-file-ignores]
"**/*.ipynb" = [
  "B018", # Allow "useless" expressions, which do suppress outputs in notebooks
  "D1",   # Allow missing docstrings in notebooks
  "E703", # Allow semicolons to suppress outputs in notebooks
  "F821", # Allow undefined names, such as `display`
  "S101", # Allow assert
  "T201", # Allow print in notebooks
]
"data/deprecated/csl_models.py" = [
  "D1", # Allow missing docstrings in generated models
]
"packages/_dev/notes_dev/tools/add_changes.py" = [
  "S603", # Allow shell expressions here
  "S607", # Allow shell expressions here
]
"packages/_pipeline/notes_pipeline/stages/*.py" = [
  "C901", # Allow complex Marimo cells
  "N806", # Allow ALL_CAPS variables in Marimo cells
  "B018", # Allow "useless" expressions for Marimo cell outputs
]
"docs/**.ipynb" = [
  "E402", # Need to allow imports below patches in docs notebooks
]
"tests/**" = [
  "ARG001", # Allow unused arguments
  "S101",   # Allow assert
  "SIM300", # Allow constants (expectations) on the RHS
  "SLF001", # Allow private member access in tests
]
"types.py" = [
  "A005", # Allow types modules that shadow a stdlib module
]

[tool.ty.analysis]
allowed-unresolved-imports = ["win32*"] # From pywin32
[tool.ty.rules]
all = "warn"
possibly-unresolved-reference = "ignore" # walrus narrowing issue https://github.com/astral-sh/ty/issues/626

[[tool.ty.overrides]]
include = ["packages/lookback"] # Submodule not yet using ty
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
unresolved-import = "ignore"
