[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "notes_tests"
version = "0.0.0"
description = "Tests."
dependencies = [
    # ? Core testing
    "pytest-cov==4.1.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest-github-actions-annotate-failures==0.2.0",
    "pytest==8.0.0",
]

[tool.fawltydeps]
deps = ["tests/pyproject.toml"]
code = ["tests/notes_tests"]
ignore_undeclared = [
    "notes_docs",
    "notes_tests",
    "notes_tools",
    "notes",
]
ignore_unused = [
    # ? Core testing tools or plugins
    "pytest-cov",
    "pytest-custom-exit-code",
    "pytest-github-actions-annotate-failures",
    "pytest",
]
